# C-Code

./: .gitignore  README.md
Notes/: Basic Knowledge.one  C.one  Embedded C.one  Embedded Protocols.one  Grad Project C2000 Stuff.one  New Section 1.one  Open Notebook.onetoc2  Problem Solving.one  Software Engineering.one
Notes/OneNote_RecycleBin/: OneNote_DeletedPages.one  Open Notebook.onetoc2
Project 1/: README.md  README.md.txt
Project 1/Code/: Makefile  linker_script.ld  main.c  startup.c
Project 1/Code/driver/: driver.h
Project 1/Protous Project/: Last Loaded yarb.pdsbak  yarb.pdsprj  yarb.pdsprj.DESKTOP-CSIG9J7.Mark.workspace
Project 1/UML/: Diagrams.xml  Requierment Diagram  Requierment Diagram.xml  Requierment Diagram.xml~  untitled.xml~
Project 2/: Makefile  main.c  student.c  student.h  test.txt
Unit  13 - CAN Protocol/: .mxproject  .project  Case_Study_1.ioc  mx.scratch
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/: .cproject  CMakeLists.txt
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/Debug/: Drivers.list  Drivers.map  makefile  objects.list
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/Debug/STM32_F103C6_Drivers/: GPIO_Driver.d  subdir.mk
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/Debug/Src/: main.d  main.su  subdir.mk
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/STM32_F103C6_Drivers/: .GPIO_Driver.c.swo  .GPIO_Driver.c.swp  .swp  GPIO_Driver.c
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/STM32_F103C6_Drivers/inc/: GPIO_Driver.h  stm32f103x6.h
Unit 7 - MCU Essential Peripherals/Labs/Lesson 3/Src/: main.c
(+288 files in other folders)
